# b-1_DS_Collab2

./: .gitignore  README.md  convenience_store_db.sql  convenience_store_db_backup1.sql  package-lock.json
appsmith/: My first application.json  docker-compose.yml
appsmith/stacks/configuration/: docker.env
appsmith/stacks/data/caddy/: instance.uuid  last_clean.json
appsmith/stacks/data/mongodb/: WiredTiger.turtle  WiredTiger.wt  WiredTigerHS.wt  _mdb_catalog.wt  collection-0--3811239365102401529.wt  (+135 more)
src/VoiceProcessing/: AdminAuthenticator.py  AdminProcessor.py  MicController.py  ModeClassifier.py  OrderProcessor.py  Order_Extractor.py  Readme.md  STT.py  voice_order_test.py  wakeup_word.py
src/store_interfaces/: CMakeLists.txt  package.xml
src/store_interfaces/action/: RobotPickPlace.action
src/store_interfaces/srv/: AdminAuth.srv  CheckStock.srv  DetectProduct.srv  FineTuneQr.srv  GetSalesAnalytics.srv  OrderProduct.srv  ScanCounterQr.srv  StartAdminAuth.srv  UpdateInventory.srv
src/store_node/: package.xml  setup.cfg  setup.py
src/store_node/launch/: store.launch.py
src/store_node/store_node/: .npy  admin_auth_manager.py  api_manager.py  counter_qr_node.py  database_manager.py  db_ai_analytics_manager.py  gripper_vision_node.py  main_manager.py  onrobot.py  robot_control.py
src/voice_processing/: package.xml  setup.py
src/voice_processing/voice_processing/: ModeClassifier.py  OrderProcessor.py  Order_Extractor.py  STT.py  env_utils.py  voice_manager.py  voice_manager_way1.py  voice_manager_way2.py  wakeup_word.py
yolo_training/: data.yaml
(+35 files in other folders)
